// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for MenuItem renders correctly 1`] = `
<span
  className="menu-item "
  tabIndex={0}
>
  <mockConstructor
    className="menu-item__link"
    to="/test"
  >
    Test
  </mockConstructor>
</span>
`;

exports[`Tests for MenuItem renders correctly when active 1`] = `
<span
  className="menu-item menu-item--active"
  tabIndex={0}
>
  <mockConstructor
    className="menu-item__link"
    to="/test"
  >
    Test
  </mockConstructor>
</span>
`;
